--- a/note-app-project/02-app-with-firebase/package.json
+++ b/note-app-project/02-app-with-firebase/package.json
@@ -39,6 +39,9 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^4.2.3",
+    "@testing-library/react": "^9.3.2",
+    "@types/jest": "^24.0.22",
     "node-sass": "^4.13.0"
   }
 }
