--- a/note-app-project/02-app-with-firebase/package.json
+++ b/note-app-project/02-app-with-firebase/package.json
@@ -20,7 +20,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --verbose=true",
     "eject": "react-scripts eject",
     "firebasetest": "firebase emulators:exec --only firestore 'yarn test'"
   },
