--- a/note-app-project/02-app-with-firebase/package.json
+++ b/note-app-project/02-app-with-firebase/package.json
@@ -45,5 +45,10 @@
     "@testing-library/react": "^9.3.2",
     "@types/jest": "^24.0.22",
     "node-sass": "^4.13.0"
+  },
+  "jest": {
+    "collectCoverageFrom": [
+      "<rootDir>/src/**/*.{js,jsx,ts,tsx}"
+    ]
   }
 }
