--- a/note-app-project/02-app-with-firebase/firebase.json
+++ b/note-app-project/02-app-with-firebase/firebase.json
@@ -6,6 +6,23 @@
   "emulators": {
     "firestore": {
       "port": 8080
+    },
+    "hosting": {
+      "port": 5000
     }
+  },
+  "hosting": {
+    "public": "build",
+    "ignore": [
+      "firebase.json",
+      "**/.*",
+      "**/node_modules/**"
+    ],
+    "rewrites": [
+      {
+        "source": "**",
+        "destination": "/index.html"
+      }
+    ]
   }
 }
